Bug 323142 Selecting from drop down in Java applet no longer populates field. patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r=ere, sr=roc